# tutorial-teacher

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/: __init__.py  cache.py  claude_client.py  cli.py  models.py  repo_fetcher.py  segmenter.py  session.py  transcript.py  utils.py
src/modes/: __init__.py  freeform.py  step_through.py
